INFRA/deployment/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: innovation-ingress
  namespace: innovation-enterprise
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: api.innovation.ia
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: innovation-backend-svc
            port:
              number: 80
